--- a/Mplayer.html
+++ b/Mplayer.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<script type="text/javascript" src="assets/js/Cookies.js"></script>
     <title>MultiPlayer</title>
 </head>
 <body>
@@ -33,6 +35,8 @@
                     </ul>
                 </li>
                 <li><a href="login.html">Login</a></li>
+                <li><div class="cp_wrapper">
+                    <input type="color" id="colorPicker" oninput="changeColour()" onchange="setCookies()" value="getDefaultColor()" style="width:100%;"></div></li>
             </div>
         </ul>
     </nav>
