--- a/scoreindivid.html
+++ b/scoreindivid.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
-
+    <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<script type="text/javascript" src="assets/js/Cookies.js"></script>
 </head>
 
 <body>
@@ -36,6 +37,8 @@
                     </ul>
                 </li>
                 <li><a href="login.html">Login</a></li>
+                <li><div class="cp_wrapper">
+                    <input type="color" id="colorPicker" oninput="changeColour()" onchange="setCookies()" value="getDefaultColor()" style="width:100%;"></div></li>
             </div>
         </ul>
     </nav>
