JOGO RAINBOW TMB

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="./css/style-test.css">
         <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
         <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
+        <link rel="stylesheet" type="text/css" href="./css/footer.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -28,10 +29,6 @@
             element.style.color=colorPickerValue;
             element2.style.background=colorPickerValue;
           
-            }
-            function getDefaultColor(){
-                return docStyle.getPropertyValue('--primaryColor');
-
             }
             function setCookies(){
                 var colorPicker= document.getElementById("colorPicker");
@@ -103,6 +100,7 @@
        element2.style.background=color;
     </script>
     </body>
+  
 
 
 </html>
