--- a/Mplayer.html
+++ b/Mplayer.html
@@ -1,133 +1,196 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <link rel="stylesheet" type="text/css" href="./css/style-test.css">
-    <link rel="stylesheet" type="text/css" href="./css/tabuleiro.css">
-    <link rel="stylesheet" type="text/css" href="./css/navBar.css">
-    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<script type="text/javascript" src="assets/js/Cookies.js"></script>
-    <title>MultiPlayer</title>
-</head>
-<body>
-<div class = "container">
-    <nav class="navbar">
-        <ul class="nav-links">
-            <!-- Para o móvel -->
-            <input type="checkbox" id="checkbox_toggle" />
-            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-            <!--Items-->
-            <div class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="info.html">Info</a></li>
-                <!--  <li><a href="jogo.html">Jogo</a></li>-->
-                <li><a href="jogo.html">Jogo</a></li>
-                <li class="services">
-                    <!-- DROPDOWN EXEMPLO -->
-                    <p> Score</p>
-                    <ul class="dropdown">
-                        <li><a href="./score.html">Geral</a></li>
-                        <li><a href="./scoreindivid.html">Individual</a></li>
-                    </ul>
-                </li>
-                <li><a href="login.html">Login</a></li>
-                <li><div class="cp_wrapper">
-                    <input type="color" id="colorPicker" oninput="changeColour()" onchange="setCookies()" value="getDefaultColor()" style="width:100%;"></div></li>
-            </div>
-        </ul>
-    </nav>
+    <head>
+        <link rel="stylesheet" type="text/css" href="./css/style-test.css">
+        <link rel="stylesheet" type="text/css" href="./css/tabuleiro.css">
+        <link rel="stylesheet" type="text/css" href="./css/navBar.css">
+        <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script type="text/javascript" src="assets/js/Cookies.js"></script>
+        <title>Individual</title>
+    </head>
 
-    <div class="painelJogo">
-        <div class = tabuleiro>
-            <div class="grid-container">
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-                <div class="grid-item">1</div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
-                <div class="grid-item">5</div>
-                <div class="grid-item">6</div>
-                <div class="grid-item">7</div>
-                <div class="grid-item">8</div>
-                <div class="grid-item">9</div>
-            </div>
-        </div>
+    <body>
+        <script>
+        
 
+        function changeColour() { //Tem que tar dentro da função para mudar tudo em tempo real
+            var navbar = document.getElementsByClassName("navbar");
+            var colorPickerValue = document.getElementById("colorPicker").value;
+            var gridContainer = document.getElementsByClassName("grid-container");
+            var allGridItems = document.getElementsByClassName("grid-item");
+            navbar[0].style.backgroundColor = colorPickerValue;
+            //Change all grid items border color
+            for (var i = 0; i < allGridItems.length; i++) {
+                allGridItems[i].style.borderColor = colorPickerValue;
+            }
+            var darkerColor=mudarBrightness(colorPickerValue, -55);
+            gridContainer[0].style.backgroundColor=darkerColor
+            var css = '.grid-item:hover{ background-color:'+darkerColor;+'; color: black;}';
+var style = document.createElement('style');
+
+if (style.styleSheet) {
+    style.styleSheet.cssText = css;
+} else {
+    style.appendChild(document.createTextNode(css));
+}
+
+document.getElementsByTagName('head')[0].appendChild(style);
+        }
+        //Negativo fica mais esquro
+        function mudarBrightness(cor, percent) {
+    let hex = cor;
+
+    // tirar o # se existir
+    hex = hex.replace(/^\s*#|\s*$/g, "");
+
+    let r = parseInt(hex.substr(0, 2), 16);
+    let g = parseInt(hex.substr(2, 2), 16);
+    let b = parseInt(hex.substr(4, 2), 16);
+
+    const calculatedPercent = (100 + percent) / 100;
+
+    r = Math.round(Math.min(255, Math.max(0, r * calculatedPercent)));
+    g = Math.round(Math.min(255, Math.max(0, g * calculatedPercent)));
+    b = Math.round(Math.min(255, Math.max(0, b * calculatedPercent)));
+
+    return `#${r.toString(16).toUpperCase()}${g.toString(16).toUpperCase()}${b
+        .toString(16)
+        .toUpperCase()}`;
+}
+
+
+        function setCookies() {
+            var colorPicker = document.getElementById("colorPicker");
+            Cookie.set("color", colorPicker.value, 365);
+        }
+    </script>
+        <div class="container">
+            <nav class="navbar">
+                <ul class="nav-links">
+                    <!-- Para o móvel -->
+                    <input type="checkbox" id="checkbox_toggle" />
+                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                    <!--Items-->
+                    <div class="menu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="info.html">Info</a></li>
+                        <!--  <li><a href="jogo.html">Jogo</a></li>-->
+                        <li><a href="jogo.html">Jogo</a></li>
+                        <li class="services">
+                            <!-- DROPDOWN EXEMPLO -->
+                            <p> Score</p>
+                            <ul class="dropdown">
+                                <li><a href="./score.html">Geral</a></li>
+                                <li><a href="./scoreindivid.html">Individual</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="login.html">Login</a></li>
+                        <li>
+                            <div class="cp_wrapper">
+                                <input type="color" id="colorPicker"
+                                    oninput="changeColour()"
+                                    onchange="setCookies()"
+                                    value="getDefaultColor()"
+                                    style="width:100%;">
+                            </div>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
+
+            <div class="painelJogo">
+                <div class="tabuleiro">
+                    <div class="grid-container">
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                        <div class="grid-item">1</div>
+                        <div class="grid-item">2</div>
+                        <div class="grid-item">3</div>
+                        <div class="grid-item">4</div>
+                        <div class="grid-item">5</div>
+                        <div class="grid-item">6</div>
+                        <div class="grid-item">7</div>
+                        <div class="grid-item">8</div>
+                        <div class="grid-item">9</div>
+                    </div>
+                </div>
+
+                
         <div class="gameInfo">
             <div class="defaulInfo">
             <h2> Tempo </h2>
@@ -151,10 +214,39 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<!--- <audio alt="easy" href="assets/audio/05 - Logic and Trick.mp3" controls type="audio/mpeg"> </audio>
-<audio alt="medium" href="assets/audio/10 - Suspense.mp3" controls type="audio/mpeg"> </audio>
-<audio alt="hard" href="assets/audio/08 - Pressing Pursuit _ Cornered.mp3" controls type="audio/mpeg"> </audio> -->
-</body>
+            </div>
+        </div>
+        <!--- <audio alt="easy" href="assets/audio/05 - Logic and Trick.mp3" controls type="audio/mpeg"> </audio>
+    <audio alt="medium" href="assets/audio/10 - Suspense.mp3" controls type="audio/mpeg"> </audio>
+    <audio alt="hard" href="assets/audio/08 - Pressing Pursuit _ Cornered.mp3" controls type="audio/mpeg"> </audio> -->
+        <script type="module"> /*Isto é para carregar só no fim (tem que ser)*/
+        var color = Cookie.get("color");
+
+        var colorPicker = document.getElementById("colorPicker");
+        var navbar = document.getElementsByClassName("navbar");
+        var gridContainer = document.getElementsByClassName("grid-container");
+        var allGridItems = document.getElementsByClassName("grid-item");
+        colorPicker.value = color;
+
+        navbar[0].style.backgroundColor = color;
+        //Change all grid items border color
+        for (var i = 0; i < allGridItems.length; i++) {
+            allGridItems[i].style.borderColor = color;
+        }
+        var darkerColor=mudarBrightness(color, -55);
+
+        gridContainer[0].style.backgroundColor=darkerColor;
+        var css = '.grid-item:hover{ background-color:'+darkerColor;+'; color: black;}';
+var style = document.createElement('style');
+
+if (style.styleSheet) {
+    style.styleSheet.cssText = css;
+} else {
+    style.appendChild(document.createTextNode(css));
+}
+
+document.getElementsByTagName('head')[0].appendChild(style);
+    </script>
+    </body>
+
 </html>
