--- a/Mplayer.html
+++ b/Mplayer.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <link rel="stylesheet" type="text/css" href="./css/style-test.css">
         <link rel="stylesheet" type="text/css" href="./css/tabuleiro.css">
@@ -11,7 +10,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script type="text/javascript" src="assets/js/Cookies.js"></script>
-        <title>Individual</title>
+        <title>Multiplayer</title>
     </head>
 
     <body>
