index.html limpo

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
    
     <head>
         <link rel="stylesheet" type="text/css" href="./css/navBar.css">
-        <link rel="stylesheet" type="text/css" href="./css/style-test.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
         <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
         <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
         <link rel="stylesheet" type="text/css" href="./css/footer.css">
+
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
         <meta charset="UTF-8">
-        <title>Página Inicial</title>
+
         <script type="text/javascript" src="assets/js/Cookies.js"></script>
+
+        <title>Página Inicial</title>
+
         </head>
 
     <body>
