info.html alt adicionado nas imagens e limpo

--- a/info.html
+++ b/info.html
@@ -3,16 +3,18 @@
 
 <head>
 
-    <!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
-    <link rel="stylesheet" type="text/css" href="./css/style-test.css">
     <link rel="stylesheet" type="text/css" href="./css/infoPage.css">
+    <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
+
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
+
     <title>Informações</title>
   
 </head>
@@ -100,17 +102,17 @@
             <br>
             <div class="row">
                 <div class="column">
-                  <img src="assets/images/tt1.png" style="width:25%">
+                  <img src="assets/images/tt1.png" alt="mina rodeada de uns">
                   <br>
                   <p>O 1 toca em 1 quadrado,<br> logo é uma mina.</p>
                 </div>
                 <div class="column">
-                  <img src="assets/images/tt2.png" style="width:25%">
+                  <img src="assets/images/tt2.png" alt="duas minas seguidas" >
                   <br>
                   <p>O 2 toca 2 quadrados, <br> por isso ambos são minas.</p>
                 </div>
                 <div class="column">
-                  <img src="assets/images/tt3.png" style="width:25%">
+                  <img src="assets/images/tt3.png" alt="três minas seguidas">
                   <br>
                   <p>O 3 toca 3 quadrados, <br>por isso todos são minas.</p>
                 </div>
@@ -127,12 +129,12 @@
 
               <div class="row">
                   <div class="column2">
-                      <img src="assets/images/tt4.png" style="width:25%">
+                      <img src="assets/images/tt4.png" alt="padrao vazio, mina, vazio, mina, vazio">
                       <br>
                       <p>O padrão 1-2-1 têm 1 solução.</p>
                   </div>
                   <div class="column2">
-                      <img src="assets/images/tt5.png" style="width:25%">
+                      <img src="assets/images/tt5.png" alt="padrão vazio, mina, mina, vazio">
                       <br>
                       <p>O padrão 1-2-2-1 têm 1 solução.</p>
                   </div>
