--- a/scoreindivid.html
+++ b/scoreindivid.html
@@ -2,17 +2,20 @@
 <html lang="pt">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Scoreboard Individual</title>
-    <link rel="stylesheet" type="text/css" href="./css/style-test.css">
+
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
-    <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
-    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
     <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
+    <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
+
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
 
+    <title>Scoreboard Individual</title>
 </head>
 
 <body>
@@ -65,18 +68,14 @@
     <div>
         <div id="multicolor2">
         <table class="scoreboard" >
-            <colgroup>
-                <col class = "nome">
-                <col class = "pontos">
-                <col class = "tempo">
-            </colgroup>
+
             <thead>
                 <tr>
                     <th>Pontos</th>
                     <th>Tempo</th>
                 </tr>
                 <tr>
-                    <td colspan = 3> <hr id="multicolor1" > </td>
+                    <td colspan = 2> <hr id="multicolor1" > </td>
                 </tr>
             </thead>
             <tbody>
