--- a/Mplayer.html
+++ b/Mplayer.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="./css/style-test.css">
-        <link rel="stylesheet" type="text/css" href="./css/tabuleiro.css">
-        <link rel="stylesheet" type="text/css" href="./css/navBar.css">
-        <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script type="text/javascript" src="assets/js/Cookies.js"></script>
-        <title>Multiplayer</title>
-    </head>
+<html lang="pt">
 
-    <body>
+<head>
+
+    <link rel="stylesheet" type="text/css" href="./css/navBar.css">
+    <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
+    <link rel="stylesheet" type="text/css" href="./css/tabuleiro.css">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <script type="text/javascript" src="assets/js/Cookies.js"></script>
+
+    <title>Individual</title>
+</head>
+<body>
         <script>
         
 
@@ -101,6 +105,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
                     </div>
                 </ul>
             </nav>
+            <br>
 
             <div class="painelJogo">
                 <div class="tabuleiro">
