--- a/forgot.html
+++ b/forgot.html
@@ -2,15 +2,20 @@
 <html lang="pt">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Forgot Password</title>
+
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/login.css">
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/colorPicker.css">
+    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<script type="text/javascript" src="assets/js/Cookies.js"></script>
+    <meta charset="UTF-8">
+
+    <script type="text/javascript" src="assets/js/Cookies.js"></script>
+
+    <title>Recuperar Password</title>
 </head>
 
 <body>
