Parte historica FEITO

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ Grupo 46    PL21
         <br>
         <div>
             <p> Nesta página vais encontrar as <a id="multicolor" href="./info.html">regras</a> de como jogar Minesweeper! </p>
+            <p> Foi inventado por Robert Donner em 1989 e tem como objectivo revelar um campo de minas sem que nenhuma seja detonada.</p>
             <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p><br>
             <p> Do que estás à espera?? </p>
         </div>
