--- a/SPlayer.html
+++ b/SPlayer.html
@@ -208,7 +208,22 @@ document.getElementsByTagName('head')[0].appendChild(style);
                     <p> ## </p>
                 </div>
             </div>
+            <br>
+            <footer>
+                <div class="cadeiraInfo">
+                    <p> ITW - 2020/2021 </p>
+                    <p> Grupo 46    PL21 </p>
+                    <p> feito com HTML5, CSS, JavaScript</p>
+                </div>
+                <div class="alunosInfo">
+                    <p> 53687  Ariana Dias </p>
+                    <p> 56931  Diogo Forte </p>
+                    <p> 58628  Miguel Miguel </p>
+
+                </div>
+            </footer>
         </div>
+
         <!--- <audio alt="easy" href="assets/audio/05 - Logic and Trick.mp3" controls type="audio/mpeg"> </audio>
     <audio alt="medium" href="assets/audio/10 - Suspense.mp3" controls type="audio/mpeg"> </audio>
     <audio alt="hard" href="assets/audio/08 - Pressing Pursuit _ Cornered.mp3" controls type="audio/mpeg"> </audio> -->
