--- a/index.html
+++ b/index.html
@@ -96,18 +96,34 @@ Grupo 46    PL21
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
         </iframe>
+
+        <br>
+        <footer>
+            <div class="cadeiraInfo">
+                <p> ITW - 2020/2021 </p>
+                <p> Grupo 46    PL21 </p>
+                <p> feito com HTML5, CSS, JavaScript</p>
+            </div>
+            <div class="alunosInfo">
+                <p> 53687  Ariana Dias </p>
+                <p> 56931  Diogo Forte </p>
+                <p> 58628  Miguel Miguel </p>
+
+            </div>
+        </footer>
     </div>
+
     <script type="module"> /*Isto é para carregar só no fim (tem que ser)*/          
-      var color=Cookie.get("color");
+        var color=Cookie.get("color");
       
-      var colorPicker = document.getElementById("colorPicker");
-      var navbar= document.getElementsByClassName("navbar");
-      var element= document.getElementById("multicolor"); //A palavra "regras"
-      var element2= document.getElementById("multicolor2"); //O botão para jogar
-       navbar[0].style.backgroundColor=color;
-       colorPicker.value=color;
-       element.style.color=color;
-       element2.style.background=color;
+        var colorPicker = document.getElementById("colorPicker");
+        var navbar= document.getElementsByClassName("navbar");
+        var element= document.getElementById("multicolor"); //A palavra "regras"
+        var element2= document.getElementById("multicolor2"); //O botão para jogar
+        navbar[0].style.backgroundColor=color;
+        colorPicker.value=color;
+        element.style.color=color;
+        element2.style.background=color;
     </script>
     </body>
   
