--- a/login.html
+++ b/login.html
@@ -104,8 +104,22 @@ Grupo 46    PL21
         </form>
     </div>
 
+    <br>
+    <footer>
+        <div class="cadeiraInfo">
+            <p> ITW - 2020/2021 </p>
+            <p> Grupo 46    PL21 </p>
+            <p> feito com HTML5, CSS, JavaScript</p>
+        </div>
+        <div class="alunosInfo">
+            <p> 53687  Ariana Dias </p>
+            <p> 56931  Diogo Forte </p>
+            <p> 58628  Miguel Miguel </p>
 
+        </div>
+    </footer>
 </div>
+
 <script type="module"> /*Isto é para carregar só no fim (tem que ser)*/          
     var color=Cookie.get("color");
     
