--- a/SPlayer.html
+++ b/SPlayer.html
@@ -125,7 +125,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 
                 <div class="gameInfo">
                     <h2> Tempo </h2>
-                    <p> #timer </p>
+                    <p> <span id="timer">0</span> s</p>
                     <h2> Minas </h2>
                     <p> ## </p>
                 </div>
