mostrar coisas de logged in

--- a/registar.html
+++ b/registar.html
@@ -21,6 +21,7 @@ Grupo 46    PL21
     <meta charset="UTF-8">
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
+    <script type="text/javascript" src="assets/js/minesweeper.js"></script>
 
     <title>Registar</title>
 </head>
@@ -71,7 +72,7 @@ Grupo 46    PL21
                     <p> Score</p>
                     <ul class="dropdown">
                         <li><a href="./score.html">Geral</a></li>
-                        <li><a href="./scoreindivid.html">Individual</a></li>
+                        <li  id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                     </ul>
                 </li>
                 <li><a href="login.html">Login</a></li>
