--- a/forgot.html
+++ b/forgot.html
@@ -73,7 +73,7 @@ Grupo 46    PL21
                     <p> Score</p>
                     <ul class="dropdown">
                         <li><a href="./score.html">Geral</a></li>
-                        <li><a href="./scoreindivid.html">Individual</a></li>
+                        <li id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                     </ul>
                 </li>
                 <li><a href="login.html">Login</a></li>
