--- a/jogo.html
+++ b/jogo.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="assets/js/cookies.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/rangeSliders.js"></script>
+    <script type="text/javascript" src="assets/js/minesweeper.js"></script>
 
     <title>Jogo</title>
 </head>
@@ -72,7 +73,7 @@
                         <p> Score</p>
                         <ul class="dropdown">
                             <li><a href="./score.html">Geral</a></li>
-                            <li><a href="./scoreindivid.html">Individual</a></li>
+                            <li id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                         </ul>
                     </li>
                     <li><a href="login.html">Login</a></li>
