--- a/scoreindivid.html
+++ b/scoreindivid.html
@@ -21,6 +21,7 @@ Grupo 46    PL21
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
+    <script type="text/javascript" src="assets/js/minesweeper.js"></script>
 
     <title>Scoreboard Individual</title>
 </head>
@@ -60,7 +61,7 @@ Grupo 46    PL21
                 <p> Score</p>
                 <ul class="dropdown">
                     <li><a href="./score.html">Geral</a></li>
-                    <li><a href="./scoreindivid.html">Individual</a></li>
+                    <li  id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                 </ul>
             </li>
             <li><a href="login.html">Login</a></li>
