mostrar coisas de logged in

--- a/Mplayer.html
+++ b/Mplayer.html
@@ -22,6 +22,7 @@ Grupo 46    PL21
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
     <script type="text/javascript" src="assets/js/minesweeper.js"></script>
+    <script type="text/javascript" src="assets/js/login.js"></script>
 
     <title>Individual</title>
 </head>
