--- a/forgot.html
+++ b/forgot.html
@@ -21,6 +21,7 @@ Grupo 46    PL21
     <meta charset="UTF-8">
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
+    <script type="text/javascript" src="assets/js/login.js"></script>
 
     <title>Recuperar Password</title>
 </head>
