--- a/SPlayer.html
+++ b/SPlayer.html
@@ -21,7 +21,7 @@ Grupo 46    PL21
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script type="text/javascript" src="assets/js/cookies.js"></script>
-    <script type="text/javascript" src="assets/js/minesweeper.js"></script>
+    <script type="text/javascript" src="assets/js/login.js"></script>
 
     <title>Individual</title>
 </head>
