--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Grupo 46    PL21
         <meta charset="UTF-8">
 
         <script type="text/javascript" src="assets/js/Cookies.js"></script>
-        <script type="text/javascript" src="assets/js/minesweeper.js"></script>
+        <script type="text/javascript" src="assets/js/login.js"></script>
 
         <title>Página Inicial</title>
 
@@ -61,7 +61,6 @@ Grupo 46    PL21
                 <div class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="info.html">Info</a></li>
-                    <!--  <li><a href="jogo.html">Jogo</a></li>-->
                     <li><a href="jogo.html">Jogo</a></li>
                     <li class="services">
                         <!-- DROPDOWN EXEMPLO -->
