--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@ Grupo 46    PL21
                         <li id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                     </ul>
                 </li>
-                <li><a  href="login.html">Login</a></li>
+                <li id="login"><a  href="login.html">Login</a></li>
                 <li><div class="cp_wrapper">
                     <input type="color" id="colorPicker" oninput="changeColour()" onchange="setCookies()" value="getDefaultColor()" style="width:100%;"></div></li>
             </div>
