--- a/SPlayer.html
+++ b/SPlayer.html
@@ -22,6 +22,7 @@ Grupo 46    PL21
 
     <script type="text/javascript" src="assets/js/cookies.js"></script>
     <script type="text/javascript" src="assets/js/login.js"></script>
+    <script type="text/javascript" src="assets/js/minesweeper.js"></script>
 
     <title>Individual</title>
 </head>
