--- a/SPlayer.html
+++ b/SPlayer.html
@@ -22,66 +22,14 @@ Grupo 46    PL21
 
     <script type="text/javascript" src="assets/js/cookies.js"></script>
     <script type="text/javascript" src="assets/js/login.js"></script>
+    <script type="text/javascript" src="assets/js/Splayer.js"></script>
     <script type="text/javascript" src="assets/js/minesweeper.js"></script>
 
     <title>Individual</title>
 </head>
 
 <body>
-    <script>
-
-
-        function changeColour() { //Tem que tar dentro da função para mudar tudo em tempo real
-            var navbar = document.getElementsByClassName("navbar");
-            var colorPickerValue = document.getElementById("colorPicker").value;
-            var gridContainer = document.getElementsByClassName("grid-container");
-            var allGridItems = document.getElementsByClassName("grid-item");
-            navbar[0].style.backgroundColor = colorPickerValue;
-            //Change all grid items border color
-            for (var i = 0; i < allGridItems.length; i++) {
-                allGridItems[i].style.borderColor = colorPickerValue;
-            }
-            var darkerColor = mudarBrightness(colorPickerValue, -55);
-            gridContainer[0].style.backgroundColor = darkerColor
-            var css = '.grid-item:hover{ background-color:' + darkerColor; +'; color: black;}';
-            var style = document.createElement('style');
-
-            if (style.styleSheet) {
-                style.styleSheet.cssText = css;
-            } else {
-                style.appendChild(document.createTextNode(css));
-            }
-
-            document.getElementsByTagName('head')[0].appendChild(style);
-        }
-        //Negativo fica mais esquro
-        function mudarBrightness(cor, percent) {
-            let hex = cor;
-
-            // tirar o # se existir
-            hex = hex.replace(/^\s*#|\s*$/g, "");
-
-            let r = parseInt(hex.substr(0, 2), 16);
-            let g = parseInt(hex.substr(2, 2), 16);
-            let b = parseInt(hex.substr(4, 2), 16);
-
-            const calculatedPercent = (100 + percent) / 100;
-
-            r = Math.round(Math.min(255, Math.max(0, r * calculatedPercent)));
-            g = Math.round(Math.min(255, Math.max(0, g * calculatedPercent)));
-            b = Math.round(Math.min(255, Math.max(0, b * calculatedPercent)));
-
-            return `#${r.toString(16).toUpperCase()}${g.toString(16).toUpperCase()}${b
-                .toString(16)
-                .toUpperCase()}`;
-        }
-
-
-        function setCookies() {
-            var colorPicker = document.getElementById("colorPicker");
-            Cookie.set("color", colorPicker.value, 365);
-        }
-    </script>
+   
     <div class="container">
         <nav class="navbar">
             <ul class="nav-links">
@@ -102,10 +50,9 @@ Grupo 46    PL21
                             <li  id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                         </ul>
                     </li>
-                    <li><a href="login.html">Login</a></li>
-                    <li>
+  <li id="login"><a href="login.html">Login</a></li>                    <li>
                         <div class="cp_wrapper">
-                            <input type="color" id="colorPicker" oninput="changeColour()" onchange="setCookies()"
+                            <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365);"
                                 value="getDefaultColor()" style="width:100%;">
                         </div>
                     </li>
@@ -146,34 +93,7 @@ Grupo 46    PL21
     <!--- <audio alt="easy" href="assets/audio/05 - Logic and Trick.mp3" controls type="audio/mpeg"> </audio>
     <audio alt="medium" href="assets/audio/10 - Suspense.mp3" controls type="audio/mpeg"> </audio>
     <audio alt="hard" href="assets/audio/08 - Pressing Pursuit _ Cornered.mp3" controls type="audio/mpeg"> </audio> -->
-    <script type="module"> /*Isto é para carregar só no fim (tem que ser)*/
-        var color = Cookie.get("color");
-
-        var colorPicker = document.getElementById("colorPicker");
-        var navbar = document.getElementsByClassName("navbar");
-        var gridContainer = document.getElementsByClassName("grid-container");
-        var allGridItems = document.getElementsByClassName("grid-item");
-        colorPicker.value = color;
-
-        navbar[0].style.backgroundColor = color;
-        //Change all grid items border color
-        for (var i = 0; i < allGridItems.length; i++) {
-            allGridItems[i].style.borderColor = color;
-        }
-        var darkerColor = mudarBrightness(color, -55);
-
-        gridContainer[0].style.backgroundColor = darkerColor;
-        var css = '.grid-item:hover{ background-color:' + darkerColor; +'; color: black;}';
-        var style = document.createElement('style');
-
-        if (style.styleSheet) {
-            style.styleSheet.cssText = css;
-        } else {
-            style.appendChild(document.createTextNode(css));
-        }
-
-        document.getElementsByTagName('head')[0].appendChild(style);
-    </script>
+   
 </body>
 
 </html>
