--- a/score.html
+++ b/score.html
@@ -22,28 +22,13 @@ Grupo 46    PL21
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
     <script type="text/javascript" src="assets/js/login.js"></script>
-
+    <script type="text/javascript" src="assets/js/score.js"></script>
     <title>Scoreboard</title>
 
 </head>
 
 <body>
-    <script>          
-
-        function changeColour() { //Tem que tar dentro da função para mudar tudo em tempo real
-        var navbar= document.getElementsByClassName("navbar");
-        var colorPickerValue= document.getElementById("colorPicker").value;
-        var element1= document.getElementById("multicolor1"); //A palavra "regras"
-        var element2= document.getElementById("multicolor2"); //O botão para jogar
-        navbar[0].style.backgroundColor=colorPickerValue;
-        element1.style.backgroundColor=colorPickerValue;
-        element2.style.borderColor=colorPickerValue;
-        }   
-        function setCookies(){
-            var colorPicker= document.getElementById("colorPicker");
-            Cookie.set("color", colorPicker.value, 365);
-        }   
-    </script>
+    
 <div class="container">
   <!--NAVBAR-->
   <nav class="navbar">
@@ -67,7 +52,7 @@ Grupo 46    PL21
             </li>
             <li><a href="login.html">Login</a></li>
             <li><div class="cp_wrapper">
-                <input type="color" id="colorPicker" oninput="changeColour()" onchange="setCookies()" value="getDefaultColor()" style="width:100%;"></div></li>
+                <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365);" value="getDefaultColor()" style="width:100%;"></div></li>
         </div>
     </ul>
 </nav>
@@ -84,7 +69,7 @@ Grupo 46    PL21
                     <th>Tempo</th>
                 </tr>
                 <tr>
-                    <td colspan = 3> <hr id="multicolor1" > </td>
+                    <td colspan = '3'> <hr id="multicolor1" > </td>
                 </tr>
             </thead>
             <tbody>
@@ -127,18 +112,7 @@ Grupo 46    PL21
 
         </div>
     </footer>
-<script type="module"> /*Isto é para carregar só no fim (tem que ser)*/          
-    var color=Cookie.get("color");
-    
-    var colorPicker = document.getElementById("colorPicker");
-    var navbar= document.getElementsByClassName("navbar");
-    var element1= document.getElementById("multicolor1"); //A palavra "regras"
-    var element2= document.getElementById("multicolor2"); //O botão para jogar
-     navbar[0].style.backgroundColor=color;
-     colorPicker.value=color;
-     element1.style.backgroundColor=color;
-     element2.style.borderColor=color;
-      </script>
+
 </body>
 
 </html>
