--- a/info.html
+++ b/info.html
@@ -51,7 +51,7 @@ Grupo 46    PL21
                             <li id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                         </ul>
                     </li>
-                    <li id="login"><a href="login.html"></a>Login</li>
+                    <li id="login"><a href="login.html">Login</a></li>
                     <li><div class="cp_wrapper">
                         <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365);" value="getDefaultColor()" style="width:100%;"></div></li>
                 </div>
