--- a/forgot.html
+++ b/forgot.html
@@ -21,7 +21,7 @@ Grupo 46    PL21
     <meta charset="UTF-8">
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
-    
+    <script type="text/javascript" src="assets/js/logout.js"></script>
     <script type="text/javascript" src="assets/js/forgot.js"></script>
     <title>Recuperar Password</title>
 </head>
@@ -48,7 +48,7 @@ Grupo 46    PL21
                         <li id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                     </ul>
                 </li>
-                <li><a href="login.html">Login</a></li>
+                <li id="login"><a href="login.html">Login</a></li>
                 <li><div class="cp_wrapper">
                     <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365)" style="width:100%;"></div></li>
             </div>
@@ -78,7 +78,7 @@ Grupo 46    PL21
 
 </div>
     <br>
-    <footer>
+    <footer id="footer">
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
             <p> Grupo 46    PL21 </p>
