--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Grupo 46    PL21
         <meta charset="UTF-8">
 
         <script type="text/javascript" src="assets/js/Cookies.js"></script>
-        
+        <script type="text/javascript" src="assets/js/logout.js"></script>
         <script type="text/javascript" src="assets/js/index.js"></script>
 
         <title>Página Inicial</title>
@@ -85,7 +85,7 @@ Grupo 46    PL21
 
     </div>
         <br>
-        <footer>
+        <footer id="footer">
             <div class="cadeiraInfo">
                 <p> ITW - 2020/2021 </p>
                 <p> Grupo 46    PL21 </p>
