--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@ Grupo 46    PL21
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
     <script type="text/javascript" src="assets/js/login.js"></script>
-
+    <script type="text/javascript" src="assets/js/logout.js"></script>
     <title>Login</title>
 </head>
 
@@ -80,7 +80,7 @@ Grupo 46    PL21
 
 </div>
     <br>
-    <footer>
+    <footer id="footer">
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
             <p> Grupo 46    PL21 </p>
