--- a/Mplayer.html
+++ b/Mplayer.html
@@ -15,7 +15,7 @@ Grupo 46    PL21
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
     <link rel="stylesheet" type="text/css" href="./css/tabuleiro.css">
-
+    <script type="text/javascript" src="assets/js/logout.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -267,7 +267,7 @@ Grupo 46    PL21
         
 
         <br>
-        <footer>
+        <footer id="footer">
             <div class="cadeiraInfo">
                 <p> ITW - 2020/2021 </p>
                 <p> Grupo 46 PL21 </p>
