--- a/SPlayer.html
+++ b/SPlayer.html
@@ -19,7 +19,7 @@ Grupo 46    PL21
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script type="text/javascript" src="assets/js/logout.js"></script>
     <script type="text/javascript" src="assets/js/cookies.js"></script>
     
     <script type="module" src="assets/js/minesweeper.js"></script>
@@ -79,7 +79,7 @@ Grupo 46    PL21
         </div>
     </div>
     <br>
-    <footer>
+    <footer id="footer">
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
             <p> Grupo 46 PL21 </p>
