--- a/jogo.html
+++ b/jogo.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="assets/js/cookies.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  
-    
+    <script type="text/javascript" src="assets/js/logout.js"></script>
     <script type="text/javascript" src="assets/js/jogo.js"></script>
     <title>Jogo</title>
 </head>
@@ -124,7 +124,20 @@
 
 
     </div>
-   
+    <br>
+    <footer id="footer">
+        <div class="cadeiraInfo">
+            <p> ITW - 2020/2021 </p>
+            <p> Grupo 46    PL21 </p>
+            <p> feito com HTML5, CSS, JavaScript</p>
+        </div>
+        <div class="alunosInfo">
+            <p> 53687  Ariana Dias </p>
+            <p> 56931  Diogo Forte </p>
+            <p> 58628  Miguel Miguel </p>
+
+        </div>
+    </footer>
 </body>
 
 </html>
