--- a/score.html
+++ b/score.html
@@ -21,7 +21,7 @@ Grupo 46    PL21
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script type="text/javascript" src="assets/js/Cookies.js"></script>
-    
+    <script type="text/javascript" src="assets/js/logout.js"></script>    
     <script type="text/javascript" src="assets/js/score.js"></script>
     <title>Scoreboard</title>
 
@@ -50,7 +50,7 @@ Grupo 46    PL21
                     <li  id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                 </ul>
             </li>
-            <li><a href="login.html">Login</a></li>
+            <li id="login"><a href="login.html">Login</a></li>
             <li><div class="cp_wrapper">
                 <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365);" value="getDefaultColor()" style="width:100%;"></div></li>
         </div>
@@ -98,8 +98,8 @@ Grupo 46    PL21
         </div>
     </div>
 </div>
-    <br>
-    <footer>
+    <br> <br>  <br> <br> <br>  <br> <br> <br>  <br> 
+    <footer id="footer">
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
             <p> Grupo 46    PL21 </p>
