--- a/SPlayer.html
+++ b/SPlayer.html
@@ -20,10 +20,9 @@ Grupo 46    PL21
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="assets/js/logout.js"></script>
-    <script type="text/javascript" src="assets/js/cookies.js"></script>
-    
-    <script type="module" src="assets/js/minesweeper.js"></script>
-    
+    <script type="text/javascript" src="assets/js/cookies.js"></script> 
+    <script type="module" src="assets/js/Splayer.js"></script>
+
 
    
 
