--- a/score.html
+++ b/score.html
@@ -61,7 +61,7 @@ Grupo 46    PL21
 <h1>Scoreboard</h1>
     <div>
         <div id="multicolor2">
-        <table class="scoreboard" >
+        <table id="scoreboard" >
         </table>
         </div>
     </div>
