Added clap(); Conffeti() and fixed footer

--- a/SPlayer.html
+++ b/SPlayer.html
@@ -22,6 +22,7 @@ Grupo 46    PL21
     <script type="text/javascript" src="assets/js/logout.js"></script>
     <script type="text/javascript" src="assets/js/cookies.js"></script> 
     <script type="module" src="assets/js/Splayer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 
 
    
@@ -81,7 +82,7 @@ Grupo 46    PL21
         </div>
     </div>
     <br><br><br><br><br><br><br><br>
-    <footer id="footer">
+    <footer  id="footer">
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
             <p> Grupo 46 PL21 </p>
